tests/invalid/Lambda_Invalid_6.whiley
type voidretfunc is function(int, int, int)->(int, void)